with help of some AI friends

--- a/index.html
+++ b/index.html
@@ -1,16 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.7.0/p5.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.7.0/addons/p5.sound.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <meta charset="utf-8" />
-
-  </head>
-  <body>
-    <main>
-    </main>
-    <script src="sketch.js"></script>
-    <script src="magicSquare.js"></script>
-  </body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>GreenSquares Projects</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&family=Roboto:wght@300;400&display=swap">
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <div class="intro">
+        <h1>Welcome to GreenSquares Projects</h1>
+        <p>Explore the creative projects built using p5.js and AI-driven technologies.</p>
+    </div>
+    <div class="container">
+        <div class="project" id="project-ai">
+            <h2>GreenSquares AI</h2>
+            <p>This project was built while experimenting with Cursor AI and making use of my free credit. It showcases advanced AI-driven interactions and creative visual effects.</p>
+            <button onclick="location.href='greensquare-ai/index.html'">See the AI version</button>
+        </div>
+        <div class="project" id="project-prince">
+            <h2>GreenSquares Prince</h2>
+            <p>This project was built when I was learning p5.js and exploring different physics interactions between objects. It features various shapes and collision effects.</p>
+            <button onclick="location.href='greensquares-prince/index.html'">See what a mere human built</button>
+        </div>
+    </div>
+    <div class="footer">
+        <p>AI helped me build this page</p>
+    </div>
+    <script src="script.js"></script>
+</body>
 </html>
